force-app/main/default/objects/Visit/fields/After_Purchase_Visit__c.field-meta.xml
<CustomField>
    <fullName>After_Purchase_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Purchase Visit</label>
    <type>Checkbox</type>
</CustomField>