force-app/main/default/objects/Visit/fields/Assistance_Help_required__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Help_required__c</fullName>
    <label>Assistance/Help required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>