force-app/main/default/objects/Visit/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>IF(
  NOT(ISBLANK( Account.ShippingCity )),
  Account.ShippingCity,
   Lead__r.Shipping__City__s 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>