force-app/main/default/objects/Visit/fields/Customer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Name__c</fullName>
    <label>Customer Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>