force-app/main/default/objects/Visit/fields/If_Others_please_specify__c.field-meta.xml
<CustomField>
    <fullName>If_Others_please_specify__c</fullName>
    <label>If Others, please specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>