force-app/main/default/objects/Visit/fields/is_Multiple_days_visit__c.field-meta.xml
<CustomField>
    <fullName>is_Multiple_days_visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Multiple days visit</label>
    <type>Checkbox</type>
</CustomField>