force-app/main/default/objects/Visit/fields/Lattitude__c.field-meta.xml
<CustomField>
    <fullName>Lattitude__c</fullName>
    <formula>IF(
    NOT(ISBLANK(AccountId)),
    Account.BillingLatitude,
    IF(
        NOT(ISBLANK(Lead__c)),
        Lead__r.Latitude,
        NULL
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lattitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>