force-app/main/default/objects/Visit/fields/Location_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Location_Latitude__c</fullName>
    <label>Location Latitude</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>