force-app/main/default/objects/Visit/fields/Location_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Location_Longitude__c</fullName>
    <label>Location Longitude</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>