force-app/main/default/objects/Visit/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <formula>IF(
    NOT(ISBLANK(AccountId)),
    Account.BillingLongitude,
    IF(
        NOT(ISBLANK(Lead__c)),
        Lead__r.Longitude,
        NULL
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>