force-app/main/default/objects/Visit/fields/Next_follow_up_date__c.field-meta.xml
<CustomField>
    <fullName>Next_follow_up_date__c</fullName>
    <label>Next follow-up date</label>
    <type>Date</type>
</CustomField>