force-app/main/default/objects/Visit/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>Owner:User.FirstName&amp;&apos; &apos;&amp;Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>