force-app/main/default/objects/Visit/fields/Queries_raised_cleared__c.field-meta.xml
<CustomField>
    <fullName>Queries_raised_cleared__c</fullName>
    <label>Queries raised/cleared</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>