force-app/main/default/objects/Visit/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reasons For Next Follow Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Natural Calamities</fullName>
            </value>
            <value>
                <fullName>Customer not available</fullName>
                <label>Customer Not Available</label>
            </value>
            <value>
                <fullName>Meeting delayed with the previous customer</fullName>
            </value>
            <value>
                <fullName>Scheduled another important customer visit</fullName>
            </value>
            <value>
                <fullName>Review schedule in IFB branch</fullName>
            </value>
            <value>
                <fullName>Corporate meeting/review in IFB Bommasandra Factory</fullName>
            </value>
            <value>
                <fullName>Personal Leave</fullName>
            </value>
            <value>
                <fullName>Visiting a Trade fair</fullName>
                <label>Visiting a Trade Fair</label>
            </value>
            <value>
                <fullName>Advance payment collection</fullName>
                <isActive>false</isActive>
                <label>Advance payment collection</label>
            </value>
            <value>
                <fullName>Channel Partner Visit</fullName>
                <isActive>false</isActive>
                <label>Channel Partner Visit</label>
            </value>
            <value>
                <fullName>Commercial Negotiation - Along with IFBs Senior Resource</fullName>
                <isActive>false</isActive>
                <label>Commercial Negotiation - Along with IFBs Senior Resource</label>
            </value>
            <value>
                <fullName>Commercial Negotiation - Self</fullName>
                <isActive>false</isActive>
                <label>Commercial Negotiation - Self</label>
            </value>
            <value>
                <fullName>Corporate meeting / review in IFB Bommasandra Factory</fullName>
                <isActive>false</isActive>
                <label>Corporate meeting / review in IFB Bommasandra Factory</label>
            </value>
            <value>
                <fullName>Customer Non-Responsive</fullName>
                <isActive>false</isActive>
                <label>Customer Non-Responsive</label>
            </value>
            <value>
                <fullName>Customer Unavailable</fullName>
                <isActive>false</isActive>
                <label>Customer Unavailable</label>
            </value>
            <value>
                <fullName>Initial Follow-Up</fullName>
                <isActive>false</isActive>
                <label>Initial Follow-Up</label>
            </value>
            <value>
                <fullName>Meeting Delayed with previous Customer</fullName>
                <isActive>false</isActive>
                <label>Meeting Delayed with previous Customer</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>PI submission &amp; balance payment collection</fullName>
                <isActive>false</isActive>
                <label>PI submission &amp; balance payment collection</label>
            </value>
            <value>
                <fullName>PO &amp; advance payment collection</fullName>
                <isActive>false</isActive>
                <label>PO &amp; advance payment collection</label>
            </value>
            <value>
                <fullName>Post site Inspection</fullName>
                <isActive>false</isActive>
                <label>Post site Inspection</label>
            </value>
            <value>
                <fullName>Pre site Inspection</fullName>
                <isActive>false</isActive>
                <label>Pre site Inspection</label>
            </value>
            <value>
                <fullName>Quote/Technical document hard copy submission</fullName>
                <isActive>false</isActive>
                <label>Quote/Technical document hard copy submission</label>
            </value>
            <value>
                <fullName>Reschedule Requested</fullName>
                <isActive>false</isActive>
                <label>Reschedule Requested</label>
            </value>
            <value>
                <fullName>Technical Negotiation - Along with IFBs Senior Resource</fullName>
                <isActive>false</isActive>
                <label>Technical Negotiation - Along with IFBs Senior Resource</label>
            </value>
            <value>
                <fullName>Technical Negotiation - Self</fullName>
                <isActive>false</isActive>
                <label>Technical Negotiation - Self</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>