force-app/main/default/objects/Visit/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks for Next Follow Up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>