force-app/main/default/objects/Visit/fields/Service_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Person_Name__c</fullName>
    <label>Service Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>