force-app/main/default/objects/Visit/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <formula>IF(
  NOT(ISBLANK( Account.ShippingStreet )),
  Account.ShippingStreet ,
   Lead__r.Shipping__Street__s 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street</label>
    <type>Text</type>
</CustomField>