force-app/main/default/objects/Visit/fields/Visit_From__c.field-meta.xml
<CustomField>
    <fullName>Visit_From__c</fullName>
    <label>Visit From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>