force-app/main/default/objects/Visit/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Visit_From__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Pre-site inspection</fullName>
            </value>
            <value>
                <fullName>Quote/Technical document hard copy submission</fullName>
            </value>
            <value>
                <fullName>Commercial Negotiation - Self</fullName>
            </value>
            <value>
                <fullName>Technical Negotiation – Self</fullName>
            </value>
            <value>
                <fullName>Commercial Negotiation – Along with IFB’s Senior resource</fullName>
            </value>
            <value>
                <fullName>Technical Negotiation - Along with IFB’s Senior resource</fullName>
            </value>
            <value>
                <fullName>Post Site Inspection</fullName>
            </value>
            <value>
                <fullName>PO &amp; advance payment collection</fullName>
            </value>
            <value>
                <fullName>Advance payment collection</fullName>
            </value>
            <value>
                <fullName>Service issue</fullName>
            </value>
            <value>
                <fullName>Relationship Building</fullName>
            </value>
            <value>
                <fullName>New opportunities</fullName>
            </value>
            <value>
                <fullName>Visit with Service</fullName>
            </value>
            <value>
                <fullName>Invitations</fullName>
            </value>
            <value>
                <fullName>Festival wishes &amp; Greetings</fullName>
            </value>
            <value>
                <fullName>PI submission &amp; balance payment collection</fullName>
            </value>
            <value>
                <fullName>Balance Payment collection</fullName>
            </value>
            <value>
                <fullName>Unloading</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Adhoc Visits</fullName>
                <isActive>false</isActive>
                <label>Adhoc Visits</label>
            </value>
            <value>
                <fullName>Competition Customer Acquisition</fullName>
                <isActive>false</isActive>
                <label>Competition Customer Acquisition</label>
            </value>
            <value>
                <fullName>Courtesy Visit</fullName>
                <isActive>false</isActive>
                <label>Courtesy Visit</label>
            </value>
            <value>
                <fullName>Follow up on lead</fullName>
                <isActive>false</isActive>
                <label>Follow up on Lead</label>
            </value>
            <value>
                <fullName>Multiple Days Visit</fullName>
                <isActive>false</isActive>
                <label>Multiple Days Visit</label>
            </value>
            <value>
                <fullName>New Customer Acquisition</fullName>
                <isActive>false</isActive>
                <label>New Customer Acquisition</label>
            </value>
            <value>
                <fullName>Post Purchase Visits</fullName>
                <isActive>false</isActive>
                <label>Post Purchase Visits</label>
            </value>
            <value>
                <fullName>Pre-Installation Check</fullName>
                <isActive>false</isActive>
                <label>Pre-Installation Check</label>
            </value>
            <value>
                <fullName>Project Visits</fullName>
                <isActive>false</isActive>
                <label>Project Visits</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>