force-app/main/default/objects/Visit/recordTypes/cgcloud__Delivery_Visit.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Delivery_Visit</fullName>
    <active>true</active>
    <description>Record type for DSD calls</description>
    <label>Delivery Visit</label>
</RecordType>