force-app/main/default/objects/Visit/recordTypes/cgcloud__Editable.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Editable</fullName>
    <active>true</active>
    <label>Editable</label>
</RecordType>