force-app/main/default/objects/Visit/validationRules/Next_follow_up_date_cannot_passed_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_follow_up_date_cannot_passed_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Next_follow_up_date__c ),
Next_follow_up_date__c &lt; today())</errorConditionFormula>
    <errorDisplayField>Next_follow_up_date__c</errorDisplayField>
    <errorMessage>Next follow up date can not be past date from today</errorMessage>
</ValidationRule>