force-app/main/default/objects/Visit/validationRules/Next_Follow_Up_Date_Change_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Follow_Up_Date_Change_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(PRIORVALUE(Next_follow_up_date__c)!= Next_follow_up_date__c,ISCHANGED(Next_follow_up_date__c),
ISBLANK( text(Reason__c) ))</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>If the Next Follow-Up Date changes reasons field fill to be Mandatory</errorMessage>
</ValidationRule>