force-app/main/default/objects/Visit/validationRules/Planned_Start_Date_Cannot_be_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Planned_Start_Date_Cannot_be_past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(
    ISNEW(),
    ISCHANGED(PlannedVisitStartTime)
  ),
  PlannedVisitStartTime &lt; NOW()
)</errorConditionFormula>
    <errorDisplayField>PlannedVisitStartTime</errorDisplayField>
    <errorMessage>Planned Start Date can not be a past date</errorMessage>
</ValidationRule>