force-app/main/default/objects/Visit/listViews/Actionplanqueue_Visit.listView-meta.xml
<ListView>
    <fullName>Actionplanqueue_Visit</fullName>
    <filterScope>Queue</filterScope>
    <label>Actionplanqueue</label>
    <queue>Actionplanqueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>