force-app/main/default/objects/Visit/listViews/All_Visit.listView-meta.xml
<ListView>
    <fullName>All_Visit</fullName>
    <columns>Name</columns>
    <columns>Owner_Name__c</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <columns>ActualVisitStartTime</columns>
    <columns>ActualVisitEndTime</columns>
    <columns>PlannedVisitStartTime</columns>
    <columns>PlannedVisitEndTime</columns>
    <columns>Lead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>